<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Base-->
    <string name="start">开始</string>
    <string name="password">密码</string>
    <string name="submit">提交</string>
    <string name="forget_password">忘记密码</string>
    <!--Base-->

    <!--Login-->
    <string name="title_activity_login">登录</string>
    <string name="login_account_password">登录密码</string>
    <string name="login_invalid_phone_number">无效的手机号</string>
    <string name="login_hint_account">手机号</string>
    <string name="login_submit">登录</string>
    <string name="login_register">手机快速注册</string>
    <string name="login_third_part">第三方登录</string>
    <string name="login_account_password_empty">用户名或者密码不能为空</string>
    <!--Login-->

    <!--register-->
    <string name="title_activity_register">手机验证</string>
    <string name="register_verification_code">验证码</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_input_verification_code">请输入验证码</string>
    <string name="register_input_number">请输入手机号</string>
    <string name="register_please_input_message">请输入您的手机号码，登录或注册您的万众艺兴账号</string>
    <string name="register_code_format_error">验证码格式错误</string>
    <!--register-->

    <!--set password-->
    <string name="title_activity_set_password">设置密码</string>
    <string name="set_password_input_password">输入密码</string>
    <string name="set_password_confirm_password">确认密码</string>
    <string name="set_password_password_font">密码长度8-32位，须包含数字、字母、符号至少2种或以上元素。</string>
    <string name="set_password_password_not_null">密码不能为空</string>
    <string name="set_password_password_diff">确认密码不同,请重试</string>
    <string name="set_password_password_too_short">密码太短</string>
    <string name="set_password_password_too_long">密码太长</string>
    <string name="set_password_password_too_simple">密码太简单</string>
    <string name="set_password_sign_success">注册成功,转入主页</string>
    <!--set password-->

    <!--reset password-->
    <string name="title_activity_reset_password">重置密码</string>
    <string name="reset_password_please_input_phone_number">请输入您的手机号码并重置密码</string>
    <string name="reset_password_please_input_password">请输入密码</string>
    <string name="reset_password_please_input_repassword">请确认密码</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="reset_password_86">+86</string>
    <string name="login_success">登录成功</string>
    <!--reset password-->

    <!--personal-->
    <string name="title_activity_personal">个人资料</string>
    <string name="personal_account_bind">账号绑定</string>
    <string name="personal_unbind">未绑定</string>
    <string name="personal_phone">手机</string>
    <string name="personal_taobao">淘宝</string>
    <string name="personal_alipay">支付宝</string>
    <string name="personal_qq">QQ</string>
    <string name="personal_github">Github</string>
    <string name="personal_twitter">Twitter</string>
    <string name="personal_google">Google</string>
    <string name="personal_base_message">基础信息</string>
    <string name="personal_portrait">头像</string>
    <string name="personal_username">用户名</string>
    <string name="personal_pickname">昵称</string>
    <string name="personal_username_static">用户名不可更改</string>
    <string name="personal_upload_portrait">上传头像</string>
    <string name="personal_photograph">拍照</string>
    <string name="personal_select_by_album">从手机相册选择</string>
    <!--personal-->

    <!--modify_pickname-->
    <string name="title_activity_modify_pickname">修改用户昵称</string>
    <string name="modify_pickname_please_input_pickname">请输入用户昵称</string>
    <string name="modify_pickname_pickname_requirement">昵称输入格式要求,5-24个字</string>
    <string name="modify_pickname_confirm_modify">确认修改</string>
    <string name="modify_success">修改成功</string>
    <string name="personal_birth">生日</string>
    <!--modify_pickname-->

    <!--AccountSetPayPassword-->
    <string name="title_activity_account_set_pay_password">设置支付密码</string>
    <string name="set_pay_password_input_pay_password">请设置支付密码</string>
    <string name="set_pay_password_confirm_pay_password">请确认支付密码</string>
    <string name="set_pay_password_pay_password_diff">两次输入密码不同,请重试</string>
    <!--AccountSetPayPassword-->

</resources>
