<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

            <EditText
                android:id="@+id/login_account_et"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:paddingStart="10dp"
                android:background="#f2f2f2"
                android:textColor="#cccccc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="14dp"
                android:hint="@string/login_hint_account" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:background="#f2f2f2"
            android:textColor="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:textSize="14dp"
            android:hint="@string/login_account_password" />
        
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_submit"
            android:onClick="onViewClicked"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/login_submit"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="16dp"
            android:gravity="center"/>

        <FrameLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_register_tv"
                android:onClick="onViewClicked"
                android:layout_marginLeft="9dp"
                android:text="@string/login_register"
                android:textSize="14dp"
                android:textColor="#101010"
                android:layout_width="wrap_content"
                android:layout_height="23dp" />

            <TextView
                android:id="@+id/login_forget_password_tv"
                android:onClick="onViewClicked"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginRight="9dp"
                android:layout_gravity="right"
                android:text="@string/forget_password"
                android:textColor="#101010"
                android:textSize="14dp" />

        </FrameLayout>

    </LinearLayout>

    <include
        android:layout_alignParentBottom="true"
        layout="@layout/content_login_third_part"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</RelativeLayout>