<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/set_password_password_et"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:paddingStart="10dp"
            android:background="#f2f2f2"
            android:textColor="#cccccc"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="14dp"
            android:hint="@string/set_password_input_password" />

        <EditText
            android:id="@+id/set_password_repassword_et"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:background="#f2f2f2"
            android:textColor="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:textSize="14dp"
            android:hint="@string/set_password_confirm_password" />

        <TextView
            android:text="@string/set_password_password_font"
            android:textColor="#a9a9a9"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="12dp"
            android:textSize="12dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_password_submit"
            android:onClick="onViewClicked"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="16dp"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>