<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/personal_base_message"
        android:textSize="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <LinearLayout
        android:id="@+id/check_portrait"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:text="@string/personal_portrait"
            android:textSize="18dp"
            android:textColor="#101010"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personal_portrait"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:src="@drawable/default_portrait"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <ImageView
            android:layout_marginStart="8dp"
            android:src="@drawable/personal_right"
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/check_username"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:text="@string/personal_username"
            android:textSize="18dp"
            android:textColor="#101010"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/personal_username"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/personal_right"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>
