<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.register.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="18dp"
            android:layout_marginLeft="19dp"
            android:textSize="14dp"
            android:textColor="#101010"
            android:text="@string/register_please_input_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#f2f2f2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="11dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="11dp"
                android:text="+86"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:textColor="#101010"
                android:layout_width="28dp"
                android:layout_height="23dp" />

            <EditText
                android:id="@+id/register_phone_number"
                android:layout_marginStart="26dp"
                android:hint="@string/register_input_number"
                android:textColor="#cccccc"
                android:textSize="14dp"
                android:background="@null"
                android:inputType="number"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="#f2f2f2"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/register_get_verification_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="43dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:text="@string/register_verification_code"
                    android:textColor="#101010"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/register_verification_code"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="11dp"
                    android:background="@null"
                    android:hint="@string/register_input_verification_code"
                    android:inputType="number"
                    android:textColor="#cccccc"
                    android:textSize="14dp" />

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_get_verification_code"
                android:layout_width="123dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:text="@string/register_get_verification_code"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_submit"
            android:onClick="onViewClicked"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/register_start"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="16dp"
            android:gravity="center"/>

    </LinearLayout>

    <include
        android:layout_gravity="bottom"
        layout="@layout/content_login_third_part"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</FrameLayout>