<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="arouter.dawn.zju.edu.module_account.ui.login.LoginViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.login.LoginActivity"
            tools:showIn="@layout/activity_login">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/login_account_et"
                    android:text="@={vm.usernameData}"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_10"
                    android:inputType="number"
                    android:background="@color/cf2f2f2"
                    android:textColor="@color/ccccccc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_46"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/login_hint_account"
                    tools:ignore="Autofill,RtlSymmetry" />

                <EditText
                    android:id="@+id/login_password_et"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@={vm.passwordData}"
                    android:background="@color/cf2f2f2"
                    android:textColor="@color/ccccccc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_46"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/login_account_password"
                    tools:ignore="Autofill,RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_submit"
                    android:onClick="@{()->vm.login()}"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_46"
                    android:text="@string/login_submit"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:textSize="@dimen/sp_16"
                    android:gravity="center"/>

                <FrameLayout
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/login_register_tv"
                        android:onClick="@{()->vm.register()}"
                        android:layout_marginStart="@dimen/dp_8"
                        android:text="@string/login_register"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/c101010"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_24" />

                    <TextView
                        android:id="@+id/login_forget_password_tv"
                        android:onClick="@{()->vm.forgetPassword()}"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_24"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:layout_gravity="end"
                        android:text="@string/forget_password"
                        android:textColor="@color/c101010"
                        android:textSize="@dimen/sp_14" />

                </FrameLayout>

            </LinearLayout>

            <include
                android:layout_alignParentBottom="true"
                layout="@layout/content_login_third_part"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
